syntax = "proto3";

package auth.v1;

import "google/protobuf/timestamp.proto";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc GetActiveSessions(GetActiveSessionsRequest) returns (GetActiveSessionsResponse);
  rpc TerminateSession(TerminateSessionRequest) returns (TerminateSessionResponse);
  rpc TerminateAllOtherSessions(TerminateAllOtherSessionsRequest) returns (TerminateAllOtherSessionsResponse);
}

enum DeviceType {
  DEVICE_TYPE_UNSPECIFIED = 0;
  DEVICE_TYPE_MOBILE = 1;
  DEVICE_TYPE_DESKTOP = 2;
  DEVICE_TYPE_TABLET = 3;
  DEVICE_TYPE_WEB = 4;
}

message DeviceInfo {
  string deviceId = 1;
  string deviceName = 2;
  DeviceType deviceType = 3;
  string os = 4;
  string browser = 5;
  string appVersion = 6;
  string ipAddress = 7;
  string userAgent = 8;
}

message E2EEKeys {
  string publicKey = 1;
  string encryptedPrivateKey = 2;
  string encryptionSalt = 3;
  string encryptionIv = 4;
  string encryptionAuthTag = 5;
}

message UserProfile {
  string id = 1;
  string username = 2;
  string email = 3;
  string phone = 4;
  string avatarUrl = 5;
  string bio = 6;
  bool emailVerified = 7;
  bool phoneVerified = 8;
  bool isActive = 9;
  google.protobuf.Timestamp createdAt = 10;
}

message SessionInfo {
  string sessionToken = 1;
  string deviceName = 2;
  DeviceType deviceType = 3;
  string os = 4;
  string browser = 5;
  string ipAddress = 6;
  string country = 7;
  string city = 8;
  google.protobuf.Timestamp createdAt = 9;
  google.protobuf.Timestamp lastActivityAt = 10;
  google.protobuf.Timestamp expiresAt = 11;
  bool isCurrent = 12;
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string phone = 4;
  E2EEKeys e2eeKeys = 5;
  DeviceInfo deviceInfo = 6;
}

message RegisterResponse {
  UserProfile user = 1;
  string sessionToken = 2;
  google.protobuf.Timestamp expiresAt = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
  DeviceInfo deviceInfo = 3;
}

message LoginResponse {
  UserProfile user = 1;
  string sessionToken = 2;
  google.protobuf.Timestamp expiresAt = 3;
  E2EEKeys e2eeKeys = 4;
}

message LogoutRequest {
  string sessionToken = 1;
}

message LogoutResponse {
  bool success = 1;
}

message GetActiveSessionsRequest {
  string sessionToken = 1;
}

message GetActiveSessionsResponse {
  repeated SessionInfo sessions = 1;
}

message TerminateSessionRequest {
  string sessionToken = 1;
  string targetSessionToken = 2;
  string password = 3;
}

message TerminateSessionResponse {
  bool success = 1;
}

message TerminateAllOtherSessionsRequest {
  string sessionToken = 1;
  string password = 2;
}

message TerminateAllOtherSessionsResponse {
  int32 terminatedCount = 1;
}
